# Hascal

./: LICENSE  README  hascal.cabal
src/: Event.hs  Hascal.hs  ICalDefs.hs  ICalParser.hs
test/: HascalTest.hs  ICalParserTests.hs
