Name: Hascal
Version:            0.0.1
Cabal-Version:      >= 1.4
License:            BSD3
License-File:       LICENSE
Author:             Mike Limansky, Victor Portnov
Synopsis:           Simple personal organizaer
Build-Type:         Simple

Executable          hascal
  Hs-Source-Dirs:       src
  Main-Is:              Hascal.hs
  Other-Modules:
    Event
  Build-Depends:        base, time, old-locale, containers, parsec
