Name: Hascal
Version:            0.0.1
Cabal-Version:      >= 1.10
License:            BSD3
License-File:       LICENSE
Author:             Mike Limansky, Victor Portnov
Synopsis:           Simple personal organizaer
Build-Type:         Simple

Executable          hascal
  Hs-Source-Dirs:       src
  Main-Is:              Hascal.hs
  Build-Depends:        base, time, old-locale, parsec, containers
  Default-Language:     Haskell2010

Test-Suite          hascal-test
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       src, test
  Main-Is:              HascalTest.hs
  Build-Depends:        base, parsec, old-locale, time, QuickCheck
  Default-Language:     Haskell2010
